--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,8 @@ canvas {
 @media (max-width: 600px) {
   .info {
     font-size: 1.2rem;
-    left: 1rem;
+    left: 0.5rem;
+    top: 10vh;
   }
 
   img {
