--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 /* ---- reset ---- */
 body {
   margin: 0;
-  font: normal 75% Arial, Helvetica, sans-serif;
+  font: Helvetica, sans-serif;
+  font-size: 10px;
 }
 canvas {
   display: block;
@@ -16,6 +17,10 @@ canvas {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 } /* ---- stats.js ---- */
 .count-particles {
   background: #000022;
@@ -51,10 +56,12 @@ canvas {
 
 .info {
   color: white;
-  font-size: 2rem;
+  font-size: 1rem;
   position: fixed;
-  top: 10vh;
-  left: 5vw;
   padding: 25px;
   text-align: center;
+}
+
+img {
+  height: 50px;
 }
