--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* ---- reset ---- */
 body {
   margin: 0;
-  font: Helvetica, sans-serif;
+  font: Arial, Helvetica, sans-serif;
   font-size: 10px;
 }
 canvas {
