--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* ---- reset ---- */
 body {
   margin: 0;
-  font: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 10px;
   background-color: #000;
 }
