--- a/styles.css
+++ b/styles.css
@@ -1,68 +1,57 @@
-/* ---- reset ---- */
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 10px;
-  background-color: #000;
+  background-color: #fefefe;
+  color: black;
 }
-canvas {
-  display: block;
-  vertical-align: bottom;
-} /* ---- particles.js container ---- */
-#particles-js {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: #090909;
-  background-image: url("");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
+
+div {
+  height: 100vh;
+}
+
+nav {
+  /* Shouldn't have a background until scrolled down at all */
+  width: 100vw;
+}
+
+nav ul {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-} /* ---- stats.js ---- */
-.count-particles {
-  background: #000022;
-  position: absolute;
-  top: 48px;
-  left: 0;
-  width: 80px;
-  color: #13e8e9;
-  font-size: 0.8em;
-  text-align: left;
-  text-indent: 4px;
-  line-height: 14px;
-  padding-bottom: 2px;
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: bold;
-}
-.js-count-particles {
-  font-size: 1.1em;
-}
-#stats,
-.count-particles {
-  -webkit-user-select: none;
-  margin-top: 5px;
-  margin-left: 5px;
-}
-#stats {
-  border-radius: 3px 3px 0 0;
-  overflow: hidden;
-}
-.count-particles {
-  border-radius: 0 0 3px 3px;
 }
 
-.info {
-  color: white;
-  font-size: 1rem;
-  position: fixed;
-  padding: 25px;
-  text-align: center;
+li {
+  list-style-type: none;
 }
 
-img {
-  height: 50px;
+li a {
+  text-decoration: none;
+  color: black;
+}
+
+li img {
+  height: 2rem;
+}
+
+#header {
+  background-color: #000;
+  color: #fefefe;
+}
+
+#about {
+}
+
+#services {
+}
+
+#faq {
+}
+
+#contact {
 }
