--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ body {
 
 div {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 nav {
@@ -42,6 +46,11 @@ li img {
 #header {
   background-color: #000;
   color: #fefefe;
+  font-size: 1.4rem;
+}
+
+#header h2 {
+  font-weight: 400;
 }
 
 #about {
