--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ div {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 5px;
 }
 
 nav {
@@ -44,9 +45,9 @@ li img {
 }
 
 #header {
-  background-color: #000;
   color: #fefefe;
   font-size: 1.4rem;
+  position: relative;
 }
 
 #header h2 {
@@ -63,4 +64,17 @@ li img {
 }
 
 #contact {
+}
+
+canvas {
+  display: block;
+}
+
+/* ---- particles.js container ---- */
+#particles-js {
+  width: 100%;
+  height: 100vh;
+  background-color: #000000;
+  color: white;
+  position: absolute;
 }
