--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ li img {
   position: absolute;
   height: 75vh;
 }
+
 #header {
   color: #fefefe;
   font-size: 1.4rem;
@@ -62,17 +63,17 @@ li img {
 
 #about {
   border: 2px solid red;
-  margin-top: 25vh;
 }
 
 .card {
   padding: 10px;
-  margin-bottom: 15px;
+  margin-bottom: 3rem;
   border: 2px solid hsla(0, 0%, 89%, 0.561);
   max-height: 30%;
   width: 80%;
-  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12),
+  box-shadow: 5px 2px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12),
     0px 2px 4px -1px rgba(0, 0, 0, 0.2);
+  font-size: 1rem;
 }
 
 .card h3 {
