--- a/styles.css
+++ b/styles.css
@@ -16,11 +16,15 @@ div {
   align-items: center;
   justify-content: center;
   padding: 5px;
+  font-size: 1rem;
 }
 
 nav {
   /* Shouldn't have a background until scrolled down at all */
   width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 nav ul {
@@ -28,6 +32,10 @@ nav ul {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  width: 100%;
+  margin-left: -40px;
+  font-size: 0.8rem;
+  font-weight: 500;
 }
 
 li {
@@ -68,12 +76,21 @@ li img {
 .card {
   padding: 10px;
   margin-bottom: 3rem;
+  border-radius: 5px;
   border: 2px solid hsla(0, 0%, 89%, 0.561);
   max-height: 30%;
   width: 80%;
-  box-shadow: 5px 2px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12),
-    0px 2px 4px -1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1), 0px 2px 4px -1px rgba(0, 0, 0, 0.06);
   font-size: 1rem;
+}
+
+.cardHeader {
+  display: flex;
+  flex-direction: row;
+}
+
+.cardHeader img {
+  margin: 0 20px 0 -10px;
 }
 
 .card h3 {
