--- a/styles.css
+++ b/styles.css
@@ -114,10 +114,37 @@ li img {
 #services {
 }
 
-#faq {
+#contact {
+  height: 50vh;
 }
 
-#contact {
+form {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+input {
+  padding: 10px;
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+textarea {
+  padding: 10px;
+  width: 100%;
+  height: 5rem;
+  margin-bottom: 30px;
+}
+
+button {
+  background-color: #71bf44;
+  border: none;
+  color: #fefefe;
+  padding: 10px;
+  border-radius: 5px;
+  width: 100%;
 }
 
 canvas {
