--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,7 @@ li img {
 
 #contact {
   height: 50vh;
+  width: 100%;
 }
 
 form {
@@ -129,10 +130,12 @@ input {
   padding: 10px;
   width: 100%;
   margin-bottom: 30px;
+  font-size: 1rem;
 }
 
 textarea {
   padding: 10px;
+  font-size: 1rem;
   width: 100%;
   height: 5rem;
   margin-bottom: 30px;
@@ -145,6 +148,7 @@ button {
   padding: 10px;
   border-radius: 5px;
   width: 100%;
+  font-size: 1rem;
 }
 
 canvas {
