--- a/styles.css
+++ b/styles.css
@@ -116,11 +116,11 @@ li img {
 
 #contact {
   height: 50vh;
-  width: 100%;
 }
 
 form {
   height: 100%;
+  width: 80vw;
   display: flex;
   flex-direction: column;
   align-items: center;
