--- a/styles.css
+++ b/styles.css
@@ -120,25 +120,24 @@ li img {
 
 form {
   height: 100%;
-  width: 80vw;
+  width: 75vw;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+textarea,
 input {
   padding: 10px;
   width: 100%;
   margin-bottom: 30px;
   font-size: 1rem;
+  border: 2px solid hsla(0, 0%, 81%, 0.8);
+  border-radius: 5px;
 }
 
 textarea {
-  padding: 10px;
-  font-size: 1rem;
-  width: 100%;
-  height: 5rem;
-  margin-bottom: 30px;
+  height: 10rem;
 }
 
 button {
