--- a/styles.css
+++ b/styles.css
@@ -148,8 +148,21 @@ button {
   border-radius: 5px;
   width: 100%;
   font-size: 1rem;
+  margin-bottom: 50px;
 }
 
 canvas {
   display: block;
+}
+
+footer {
+  font-size: 0.8rem;
+  width: 100vw;
+  height: 60vh;
+  background-color: black;
+  color: #fefefe;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
