--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ li img {
   border-radius: 5px;
   border: 2px solid hsla(0, 0%, 89%, 0.561);
   max-height: 40%;
-  max-width: 90%;
+  max-width: 80%;
   box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1), 0px 2px 4px -1px rgba(0, 0, 0, 0.06);
   font-size: 1rem;
 }
@@ -129,6 +129,7 @@ h2 {
   text-decoration: underline;
   color: #2d3436;
   text-decoration-color: #71bf44;
+  margin-bottom: -1rem;
 }
 
 #services {
@@ -182,7 +183,7 @@ h2 {
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin: 0 0 20rem 0;
+  margin: 10rem 0 30rem 0;
   padding: 0;
 }
 
@@ -202,13 +203,16 @@ h2 {
   border-radius: 5px;
   border: 2px solid hsla(0, 0%, 89%, 0.561);
   box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1), 0px 2px 4px -1px rgba(0, 0, 0, 0.06);
-  margin-top: 15rem;
+  margin: 20rem 0 0 0;
+  position: absolute;
 }
 
 .leftText {
+  left: 0;
 }
 
 .rightText {
+  right: 0;
 }
 
 .leftPic {
