--- a/styles.css
+++ b/styles.css
@@ -232,7 +232,9 @@ h2 {
 .formBtns {
   display: flex;
   flex-direction: row;
-  width: 80%;
+  width: 100%;
+  position: relative;
+  margin-top: 19rem;
 }
 
 .howItWorks {
