--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@ h2 {
   display: flex;
   flex-direction: column;
   width: 100%;
-
+  margin: 10rem 0 50rem 0;
   height: 15rem;
   width: 100vw;
   background: none;
