--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,8 @@ li img {
 }
 
 #header h2 {
+  font-size: 2rem;
+  text-align: left;
   font-weight: 400;
   color: #fefefe;
 }
@@ -150,7 +152,7 @@ h2 {
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin: 10rem 0 50rem 0;
+  margin: 5rem 0 50rem 0;
   height: 15rem;
   width: 100vw;
   background: none;
