--- a/styles.css
+++ b/styles.css
@@ -198,6 +198,7 @@ li img {
   background-color: #000000;
   position: absolute;
   height: 75vh;
+  width: 100vw;
 }
 
 #header {
@@ -210,7 +211,7 @@ li img {
 #header h2 {
   font-size: 2rem;
   text-align: left;
-  font-weight: 400;
+  font-weight: 100;
   color: #fefefe;
 }
 
@@ -416,4 +417,71 @@ footer img {
 }
 
 @media (min-width: 600px) {
+  nav {
+    padding: 15px;
+    height: 5rem;
+  }
+
+  nav ul {
+    font-size: 1.6rem;
+    font-weight: 550;
+    /* TODO: add underline on hover  */
+  }
+
+  li img {
+    height: 5rem;
+  }
+
+  #header {
+    font-size: 2rem;
+  }
+
+  #header h2 {
+    font-size: 2.5rem;
+  }
+
+  #header p {
+    font-weight: lighter;
+  }
+
+  .pros {
+    font-size: 2.5rem;
+  }
+
+  .serviceCards {
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+
+  .card {
+    height: 400px;
+    width: 400px;
+    padding: 25px 15px;
+    border: 2px solid hsla(0, 0%, 89%, 0.561);
+    box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1), 0px 2px 4px -1px rgba(0, 0, 0, 0.06);
+    font-size: 1.7rem;
+  }
+
+  .card img {
+    height: 100px;
+    padding: 15px;
+  }
+  .card h3 {
+    font-size: 1.7rem;
+    padding-bottom: 15px;
+  }
+
+  .card p {
+    font-size: inherit;
+  }
+
+  .step {
+    margin: 25vh 0;
+  }
+
+  .step img {
+    width: 600px;
+    height: 400px;
+  }
 }
