making things big

--- a/styles.css
+++ b/styles.css
@@ -176,7 +176,8 @@ nav ul {
   align-items: center;
   width: 100%;
   margin-left: -40px;
-  font-size: 1rem;
+  font-size: 1.1rem;
+  padding: 15px 0;
   font-weight: 500;
 }
 
