--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,7 @@ video {
   font: inherit;
   vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -374,6 +375,10 @@ form {
   align-items: center;
 }
 
+form h2 {
+  font-size: 2rem;
+}
+
 textarea,
 input {
   padding: 10px;
@@ -472,15 +477,23 @@ footer img {
   }
 
   .step {
-    margin: 10rem 0;
+    margin: 20rem 0 0 0;
     height: 30rem;
+    flex-direction: row;
   }
 
   .stepText {
     font-size: 2rem;
-    padding: 3rem;
-    text-align: center;
+    padding: 0;
     line-height: 2rem;
+    margin: 0;
+    height: inherit;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .stepThree .stepText {
+    padding: 0;
   }
 
   .howItWorks {
@@ -488,7 +501,11 @@ footer img {
   }
 
   .step img {
-    height: 800px;
+    height: 30rem;
+  }
+
+  .leftPic .rightPic {
+    margin: 0;
   }
 
   form input {
