--- a/styles.css
+++ b/styles.css
@@ -245,7 +245,7 @@ body {
   margin-bottom: 3rem;
   border-radius: 5px;
   max-height: 40%;
-  max-width: 80%;
+  width: 80%;
   font-size: 1rem;
   padding-top: 10rem;
 }
@@ -285,71 +285,56 @@ h2 {
   font-size: 2rem;
 }
 
-.step {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  margin: 10rem 0 50rem 0;
+.steps {
+  align-self: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: stretch;
+  justify-items: center;
+  column-gap: -10px;
+  row-gap: 10rem;
+  max-width: 100vw;
+}
+
+.stepImg {
   height: 15rem;
-  width: 100vw;
-  background: none;
-  z-index: 2;
-  color: white;
-  margin-bottom: 1rem;
-  line-height: 1.5rem;
 }
 
-.step p {
-  width: 80%;
-}
-
-.step img {
-  height: 19rem;
-  max-width: 90vw;
+.landScape {
+  height: 23rem;
 }
 
 .stepText {
   color: black;
   font-size: 1.2rem;
-  width: 75vw;
-  position: relative;
   background-color: white;
   padding: 1rem;
+  height: 30%;
+  width: 60vw;
   border-radius: 5px;
   border: 2px solid hsla(0, 0%, 89%, 0.561);
   box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1), 0px 2px 4px -1px rgba(0, 0, 0, 0.06);
-  margin: -5rem 0 0 0;
-}
-
-.stepOne {
-}
-
-.stepTwo {
-}
-
-.stepThree .stepText {
-  padding: 2rem 1rem;
-}
-
-.stepOne .stepText {
+  align-self: flex-end;
+  z-index: 10;
 }
 
 .leftText {
+  justify-self: flex-end;
+  margin-right: -10rem;
+}
+
+.leftImg {
+  justify-self: flex-end;
 }
 
 .rightText {
+  justify-self: flex-start;
+  margin-left: -5rem;
 }
 
-.leftPic {
-  align-self: flex-end;
-  border-top-right-radius: 2px;
-  border-bottom-right-radius: 2px;
-}
-
-.rightPic {
-  align-self: flex-start;
-  border-top-left-radius: 2px;
-  border-bottom-left-radius: 2px;
+.rightImg {
+  justify-self: flex-start;
+  margin-left: -5rem;
 }
 
 .formBtns {
